Week 3 Update, added WebView2, Clear Song, Find Song, and updated Show All. Challenge was to add the Save List and Load List.

--- a/Buchholz_CourseProject_Part1/MainForm.resx
+++ b/Buchholz_CourseProject_Part1/MainForm.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAgBAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACgAAACwAAAA8wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAADzAAAAsAAAACgAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAQAAACUAAAA5wAAAE8AAAAoAAAA7wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA7wAA
+        ACgAAAAAAAAAAAAAAAAAAAAQAAAAuwAAAP8AAAD/AAAA5wAAALAAAAD/AAAAsAAAABcAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFwAA
+        ALAAAAD/AAAAsAAAAAAAAAAAAAAAJgAAANgAAAD6AAAAagAAAP8AAAD/AAAA8wAAAP8AAAAXAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAFwAAAP8AAADzAAAAAAAAAEMAAADuAAAA7gAAAEMAAAAAAAAA/wAAAP8AAAD/AAAA/wAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAA/wAAAP8AAABqAAAA+gAAANgAAAAmAAAAAAAAAAAAAAD/AAAA/wAA
+        AP8AAAD/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/AAAA/wAAAP8AAAC7AAAAEAAAAAAAAAAAAAAAAAAA
+        AP8AAAD/AAAA/wAAAP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP8AAAD/AAAAlAAAAAQAAAAAAAAAAAAA
+        AAAAAAAAAAAA/wAAAP8AAAD/AAAA/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/wAAAP8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAD/AAAA/wAAAP8AAAD/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/AAAA/wAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP8AAAD/AAAA/wAAAP8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AP8AAAD/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/wAAAP8AAAD/AAAA/wAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAA/wAAAP8AAACqAAAAFQAAAAAAAAAAAAAAAAAAAAAAAAD/AAAA/wAAAP8AAAD/AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAD/AAAA/wAAAP8AAADpAAAAVQAAAAAAAAAAAAAAAAAAAP8AAAD/AAAA8gAA
+        AP8AAAAXAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAFwAAAP8AAADzAAAAVAAAAOkAAAD/AAAAqgAAABUAAAAAAAAA/wAA
+        AP8AAACuAAAA/wAAALAAAAAXAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABcAAACwAAAA/wAAAK4AAAAAAAAAFQAAAKkAAAD/AAAA6QAA
+        AFUAAAD/AAAA/wAAACUAAADsAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAADsAAAAJQAAAAAAAAAAAAAAAAAA
+        AFQAAADpAAAA/wAAAP8AAADnAAAAAAAAADwAAAD9AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/gAAAP4AAAD/AAAA/wAAAO4AAABQAAAAAAAA
+        AAAAAAAAAAAAAAAAABUAAACpAAAA5wAAAE4AAAAGAAAAzQAAAP8AAADWAAAATgAAAAsAAAALAAAATgAA
+        ANYAAAD/AAAAzQAAAAYAAAAAAAAAVgAAAP0AAAD+AAAAqwAAADoAAAAHAAAABgAAADoAAACrAAAA/gAA
+        APwAAABSAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGwAAAD/AAAA1gAAAA8AAAAAAAAAAAAA
+        AAAAAAAAAAAADwAAANYAAAD/AAAAbQAAABgAAADxAAAA/gAAAHAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAABwAAAA/gAAAO8AAAAWAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAygAAAP8AAABOAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAATgAAAP8AAADKAAAAhQAAAP8AAACrAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAACrAAAA/wAAAIMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD2AAAA/wAA
+        AAsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALAAAA/wAAAPYAAADSAAAA/wAAADoAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADoAAAD/AAAA0QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        APYAAAD/AAAACwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAsAAAD/AAAA9gAAAPcAAAD+AAAABwAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABgAAAP4AAAD4AAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAywAAAP8AAABOAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAATgAAAP8AAADLAAAA9wAA
+        AP4AAAAHAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHAAAA/gAAAPcAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAABwAAAA/wAAANYAAAAPAAAAAAAAAAAAAAAAAAAAAAAAAA8AAADWAAAA/wAA
+        AHAAAADSAAAA/wAAADsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADoAAAD/AAAA0gAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAcAAADSAAAA/wAAANYAAABOAAAACwAAAAsAAABOAAAA1gAA
+        AP8AAADSAAAABwAAAIYAAAD/AAAArAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAqwAA
+        AP8AAACGAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABwAAADSAAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA0gAAABwAAAAAAAAAGQAAAPEAAAD+AAAAcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AHAAAAD+AAAA8gAAABkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAcAAABwAAAAywAA
+        APYAAAD2AAAAywAAAHAAAAAHAAAAAAAAAAAAAAAAAAAAWAAAAP0AAAD+AAAAqwAAADsAAAAHAAAABwAA
+        ADoAAACrAAAA/gAAAP0AAABYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWAAAAPEAAAD/AAAA/wAA
+        AP4AAAD+AAAA/wAAAP8AAADyAAAAWAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGQAA
+        AIYAAADSAAAA9wAAAPcAAADSAAAAhgAAABkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA//////////+AAAHwAAAA4A//8MAf//iEP//8DD///Bw///w8P//8/D//
+        /Pw///z8P//8PD///Bwf//gED//wgAAAAOCAAADwAAgAfw8A/D8fgf4/H4H+Px+B/j8fgf4/DwH+PwAB
+        /j+AEPw/wDgAf//8AP///gH///////////8=
+</value>
+  </data>
 </root>
