Week 5: Updated to the Add Button, Remove Button and Load Feature

--- a/Buchholz_CourseProject_Part2/InputForm.resx
+++ b/Buchholz_CourseProject_Part2/InputForm.resx
@@ -120,78 +120,54 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAgBAAAAAAAAAAAAAAAAAAAAAA
+        AAABAAEAIBUAAAEAIAD8CgAAFgAAACgAAAAgAAAAKgAAAAEAIAAAAAAAgAoAAOzGAADsxgAAAAAAAAAA
+        AABPT08AT09PDk9PT5dPT0/6T09P/09PT/5PT0//T09P/09PT/9PT0//T09P/09PT/9PT0//T09P/09P
+        T/9PT0//T09P/09PT/9PT0//T09P/09PT/9PT0//T09P/09PT/9PT0//T09P/09PT/5PT0//T09P+E9P
+        T5BPT08LT09PAE9PTwVPT0+6T09P/09PT8dPT0+bT09PoU9PT6JPT0+iT09Pok9PT6JPT0+iT09Pok9P
+        T6JPT0+iT09Pn09PT59PT0+fT09Pn09PT59PT0+fT09Pn09PT59PT0+fT09Pn09PT59PT0+fT09Pn09P
+        T5xPT0/KT09P/09PT69OTk4AT09Pa09PT/9PT0+CT09PAE9PTwJPT08AAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AABPT08AT09PAk9PTwBPT0+QT09P/09PT1dPT0+vT09P/09PTxpPT08AT09PAE9PTyFPT09MT09PSk9P
+        T0pPT09KT09PSk9PT0pPT09MT09PQk9PTwpPT08BT09PBE9PTwZPT08GT09PBk9PTwZPT08GT09PBk9P
+        TwZPT08GT09PBk9PTwZPT08JT09PAE9PTylPT0//T09Plk9PT7hPT0/8T09PFk9PTwBPT09BT09P909P
+        T/9PT0/+T09P/09PT/9PT0//T09P/09PT/1PT0//T09PvU9PTwRPT08AT09PAU9PTwBPT08AAAAAAAAA
+        AAAAAAAAAAAAAAAAAABPT08AT09PAE9PTwJPT08AT09PIk9PT/9PT0+fT09PuE9PT/1PT08VT09PAE9P
+        T6xPT0//T09PYE9PT09PT09UT09PU09PT1NPT09VT09PRk9PT6NPT0//T09PO09PTwBPT09FT09Pzk9P
+        T8ZPT0/HT09Px09PT8dPT0/HT09Px09PT8VPT0/TT09Pbk9PTwBPT08jT09P/09PT59PT0+5T09P/U9P
+        TxRPT08AT09PuE9PT/hOTk4LT09PAE9PTwEAAAAAAAAAAE9PTwRPT08AT09PbU9PT/9PT08/T09PAE9P
+        T1VPT0/vT09P409PT+VPT0/lT09P5U9PT+VPT0/lT09P4k9PT/NPT0+ET09PAE9PTyNPT0//T09PoE9P
+        T7lPT0/9T09PFE9PTwBPT0+4T09P+U9PTxBPT08CT09PBU9PTwRPT08ET09PCU9PTwBPT09wT09P/09P
+        TzxPT08AT09PAwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAE9PTwJPT08AT09PIE9P
+        T/9PT0+gT09PuU9PT/1PT08VT09PAE9PT6JPT0//T09PI09PTwBPT08CAAAAAE9PTwBPT08ET09PAE9P
+        T5BPT0//T09PL09PTwBPT09IT09P0k9PT8dPT0/JT09PyU9PT8lPT0/JT09PyU9PT8dPT0/VT09PcU9P
+        TwBPT08iT09P/09PT6BPT0+5T09P/U9PTxRPT08AT09PTU9PT/9PT0+0T09PFk9PTwNPT08FT09PBU9P
+        TwJPT09PT09P/09PT81PT08DT09PAE9PT1FPT0/rT09P3k9PT+FPT0/hT09P4U9PT+FPT0/hT09P3k9P
+        T+5PT0+BT09PAE9PTyNPT0//T09PoE9PT7lPT0/9T09PEk9PTwBPT08AT09PjE9PT/9PT0/0T09P3E9P
+        T9pPT0/aT09P5E9PT/9PT0/pT09PMU9PTwBPT08CT09PAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAE9PTwJPT08AT09PIE9PT/9PT0+gT09PuU9PT/1PT08RT09PAE9PTwNPT08BT09POk9P
+        T8RPT0//T09P/U9PT/9PT0/7T09Pf09PTxVPT08AT09PBU9PTwBPT09QT09P609PT95PT0/hT09P4U9P
+        T+FPT0/hT09P4U9PT95PT0/uT09PgU9PTwBPT08jT09P/09PT6BPT0+5T09P/U9PTxFPT08AT09PA09P
+        TwBPT08VT09P3U9PT/tPT0+wT09Pzk9PT/9PT09+T09PAE9PTwVPT08DT09PAE9PT0ZPT0/ST09Px09P
+        T8lPT0/JT09PyU9PT8lPT0/JT09Px09PT9VPT09xT09PAE9PTyJPT0//T09PoE9PT7lPT0/9T09PEU9P
+        TwBPT08FT09PAE9PT35PT0//T09PVU9PTwBPT08ET09PxE9PT/1PT08WT09PAE9PTwFPT08AAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAE9PTwJPT08AT09PIE9PT/9PT0+gT09PuU9P
+        T/1PT08RT09PAE9PTwVPT08AT09Pkk9PT/9PT08nT09PAE9PTwBPT0+ZT09P/09PTyFPT08AT09PBU9P
+        TwBPT09ST09P709PT+NPT0/lT09P5U9PT+VPT0/lT09P5U9PT+JPT0/zT09PhE9PTwBPT08jT09P/09P
+        T6BPT0+4T09P/U9PTxJPT08AT09PBE9PTwBPT09JT09P/09PT8JPT089T09PbE9PT/9PT0/KT09PAFFR
+        UQBPT08DT09PAE9PT0NPT0/OT09PxU9PT8ZPT0/GT09Pxk9PT8ZPT0/GT09PxE9PT9JPT09uT09PAE9P
+        TyNPT0//T09Pn09PT7hPT0/8T09PE09PTwBPT08BT09PAU9PTwBPT0+AT09P/09PT/1PT0//T09P3E9P
+        TyxPT08AT09PAk9PTwBPT08AT09PAE9PTwBPT08AAAAAAAAAAAAAAAAAAAAAAAAAAABPT08AT09PAE9P
+        TwJPT08AT09PIk9PT/9PT0+fT09Pr09PT/9PT08aT09PAE9PTwZPT08ET09PBU9PTwBPT08oT09PXU9P
+        T0tPT08MTk5OAE9PTwVPT08ET09PBE9PTwRPT08GT09PB09PTwZPT08GT09PBk9PTwZPT08GT09PBk9P
+        TwZPT08GT09PCU9PTwBPT08qT09P/09PT5ZPT09rT09P/09PT4JPT08AT09PAk9PTwAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABgAAAHUAAADMAAAA6wAAAO4AAADuAAAA7gAA
-        AO4AAADuAAAA7gAAAO4AAADuAAAA7gAAAO4AAADuAAAA7gAAAO4AAADuAAAA6wAAAMwAAAB1AAAABgAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMAAAC6AAAA/wAAAP8AAAD/AAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
-        AP8AAAC7AAAAAwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAXwAAAP8AAAD/AAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAABfAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACnAAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAKcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        ALgAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAAuQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAsQAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAACxAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAACiAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAKIAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIEAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAAgQAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUQAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
-        AP8AAABRAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAATAAAA+wAAAP8AAAD/AAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
-        AP8AAAD/AAAA+wAAABMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACxAAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAACxAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        ADEAAAD7AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA+gAAAMgAAACkAAAApAAAAMgAAAD6AAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAAD/AAAA+wAAADEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAA
-        ACEAAAAhAAAAEQAAAG4AAAD+AAAA/wAAAP8AAAD/AAAA8wAAAHsAAAAWAAAAAgAAABoAAAAaAAAAAgAA
-        ABYAAAB7AAAA8wAAAP8AAAD/AAAA/wAAAP4AAABuAAAAEgAAACIAAAAhAAAAEAAAAAAAAAAAAAAAJgAA
-        AMIAAAD+AAAA/wAAAP8AAADoAAAAMQAAAEEAAACyAAAA5AAAALQAAAAgAAAAIgAAAKAAAADxAAAA/wAA
-        AP8AAADxAAAAoQAAACIAAAAgAAAAtAAAAOQAAACyAAAAQQAAADEAAADoAAAA/wAAAP8AAAD+AAAAwgAA
-        ACYAAADKAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD3AAAAjgAAADMAAAAIAAAAAAAAAEoAAADyAAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAAD/AAAA8gAAAEoAAAAAAAAACAAAADMAAACOAAAA9wAAAP8AAAD/AAAA/wAA
-        AP8AAAD/AAAAygAAAPsAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAJIAAAAxAAAA9wAA
-        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA9wAAADIAAACSAAAA/wAAAP8AAAD/AAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAAD7AAAA+AAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD6AAAAGAAA
-        AMYAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAAxgAAABgAAAD6AAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAPkAAADqAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
-        AL8AAAAnAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAAJwAA
-        AL8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA6gAAAM0AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
-        AP8AAAD/AAAAlAAAAFgAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
-        AP8AAABYAAAAkwAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAADNAAAAmAAAAP8AAAD/AAAA/wAA
-        AP8AAAD/AAAA/QAAAP8AAACLAAAAYgAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
-        AP8AAAD/AAAA/wAAAGIAAACLAAAA/wAAAP0AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAJkAAAA3AAAA/AAA
-        AP4AAAC1AAAAUQAAABEAAAAAAAAAFgAAACkAAABGAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAAD/AAAARwAAACkAAAAWAAAAAAAAABEAAABRAAAAtQAAAP4AAAD8AAAANwAA
-        AAAAAAA6AAAAMwAAAAAAAAApAAAAfwAAAJUAAABzAAAAGAAAAAwAAADzAAAA/wAAAP8AAAD/AAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAPMAAAAMAAAAGAAAAHMAAACVAAAAfwAAACkAAAAAAAAAMgAA
-        ADoAAAAAAAAAAAAAAAAAAAAAAAAAbwAAAPsAAAD/AAAA/wAAAP8AAADwAAAARwAAAIUAAAD/AAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAAhQAAAEcAAADwAAAA/wAAAP8AAAD/AAAA+wAA
-        AHAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEQAAAD+AAAA/wAAAP8AAAD/AAAA/wAAAP8AAADyAAAAIwAA
-        AMAAAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAMAAAAAjAAAA8gAAAP8AAAD/AAAA/wAA
-        AP8AAAD/AAAA/gAAAEQAAAAAAAAAAAAAAAAAAAAAAAAAsgAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAA
-        AP8AAAB/AAAACgAAAJ0AAAD9AAAA/wAAAP8AAAD/AAAA/wAAAP0AAACeAAAACgAAAH8AAAD/AAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAAD/AAAAsgAAAAAAAAAAAAAAAAAAAAAAAADZAAAA/wAAAP8AAAD/AAAA/wAA
-        AP8AAAD/AAAA/wAAAKYAAAAAAAAAAAAAACoAAAB8AAAAogAAAKIAAAB8AAAAKgAAAAAAAAAAAAAApQAA
-        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAADZAAAAAAAAAAAAAAAAAAAAAAAAAMYAAAD/AAAA/wAA
-        AP8AAAD/AAAA/wAAAP8AAAD/AAAAkwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAACTAAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAMYAAAAAAAAAAAAAAAAAAAAAAAAAcgAA
-        AP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP4AAAA/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAD8AAAD+AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAAcgAAAAAAAAAAAAAAAAAA
-        AAAAAAAFAAAAvQAAAP8AAAD/AAAA/wAAAP8AAAD/AAAAjwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAI8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAL0AAAAFAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAGAAAAegAAANQAAADqAAAAyAAAAF8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAF4AAADIAAAA6gAAANQAAAB6AAAABgAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAA//////gAAB/wAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD/AA
-        AA/4AAAf+AAAH8AAAAMAAAAAACAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAQJAAAAngAAAHwAAAA8AA
-        AAPAGBgDwB/4A8Af+APAP/wD4H/+B/////8=
+        AAAAAAAAAAAAAE9PTwBPT08BT09PAE9PT5VPT0//T09PVU9PTwVPT0+6T09P/09PT8ZPT0+bT09Pn09P
+        T59PT0+fT09PoU9PT6JPT0+iT09Pn09PT59PT0+fT09Pn09PT59PT0+fT09Pn09PT59PT0+fT09Pn09P
+        T59PT0+fT09Pn09PT59PT0+fT09Pn09PT5xPT0/NT09P/09PT6pPT08AT09PAE9PTw5PT0+XT09P+k9P
+        T/9PT0/+T09P/09PT/9PT0//T09P/09PT/9PT0//T09P/09PT/9PT0//T09P/09PT/9PT0//T09P/09P
+        T/9PT0//T09P/09PT/9PT0//T09P/09PT/9PT0/+T09P/09PT/dPT0+KT09PCE9PTwCAAAABAAAAARP/
+        /8gQAAAIEAC/yBAAgAgRaIAIEAi/6BFIgAgQAIAIGAE/6BACgAgUBIAIFEL/6BRigAgUBoAIEgQ/yBEA
+        AAgT///IAAAAAYAAAAE=
 </value>
   </data>
 </root>
